--- a/myinfosit/app/webroot/css/core.css
+++ b/myinfosit/app/webroot/css/core.css
@@ -197,7 +197,7 @@ box-shadow: inset 0 3px 5px rgba(0,0,0,0.15);
 .container-left{
 	position: relative;
 	float:left;
-	width:90%;
+	width:100%;
 	/* border:1px solid #eee; */
 }
 .container-right{
@@ -216,8 +216,8 @@ box-shadow: inset 0 3px 5px rgba(0,0,0,0.15);
 .container-list{
 	position: relative;
 	float:left;
-	width:98%;
-	padding-right:10px;
+	width:91%;
+	padding-right:5px;
 }
 /*container-end*/
 
@@ -999,4 +999,14 @@ margin-top: -2px;
 display: none;
 }
 
+.pagenavcontainer {
+border:1px solid #ffffff;
+height: 35px;
+display: inline;
+}
+
+.pagenavcontainer div {
+padding-left: 10px;
+
+}
 
