--- a/myinfosit/app/plugins/happytime/css/demo.css
+++ b/myinfosit/app/plugins/happytime/css/demo.css
@@ -23,7 +23,7 @@
 	position: relative;
 	z-index: 9999;
 	width: 100%;
-	//overflow: hidden;
+	overflow: hidden;
 	text-align: center;*/
 	width: 100%;
 	height: 100%;
@@ -33,9 +33,9 @@
 
 body {
 	text-align:center;
-	//width:320px;
-	margin:0px;
-	//over-flow:hide;
+	width: 100%;
+	margin: 0px;
+	overflow-x: hidden;
 }
 
 .container {
@@ -43,7 +43,7 @@ body {
 	display: block;
 	position: relative;
 	float: left;	
-	margin:auto;
+	margin:0px;
 	
 }
 
@@ -123,7 +123,7 @@ body {
 }
 
 .article_item {
-	border-top: 1px solid #DADADA;
+	border-top: 2px solid #DADADA;
 	height: 200px;
 	position: relative;	
 	float: left;
@@ -145,7 +145,7 @@ body {
 	font-weight: 100;
 	font-size: 2.75em;
 	font-family: serif;	
-	padding: 2% 1% 2% 1%;
+	padding: 2% 2% 2% 2%;
 	line-height: 1em;
 	text-align: left;
 	//text-indent: 30px;	
@@ -163,13 +163,23 @@ body {
      background-repeat:no-repeat;
 }
 
+.title_header{
+        width: 100%;
+        position: relative;	
+	float: left;
+        //height: 100%;
+
+}
+
 .title_first {
 	width: 100%;	
 	background-color: rgba(0,0,0,0.4);
 	/*opacity: 0.3;*/
 	filter:	alpha(opacity=0.4);
 	position: absolute;
-	bottom: 10px;		
+	bottom: 10px;	
+        //position: relative;	
+	//float: left;	
 }
 
 .title_text {	
@@ -177,10 +187,18 @@ body {
 	font-weight: 100;
 	font-size: 3em;
 	font-family: serif;	
-	padding: 2% 1% 2% 1%;
-	line-height: 1em;
+	padding: 2% 2% 2% 2%;
+	line-height: 1.2em;
 	text-align: left;
-	//text-indent: 30px;	
+        //border:1px solid #000000;
+       width: 100%;
+        max-height:110px;
+        display: block;
+        white-space: nowrap;
+        overflow-x:hidden;
+      position: relative;	
+	float: left;
+	
 }
 
 .bg_bottom {
@@ -191,15 +209,29 @@ body {
 	clear: both;
 }
 
-.hook {
-	width: 100%;
-	height: 30px;
-	
+.hook * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0 auto;
 }
 
-
+.hook {
+	//visible:hidden;
+	display: none;
+	/* customizable */ height: 0px;
+	/* customizable */ //background: url(../material/hook/hook-bgs.png) repeat;
+	/* customizable */ //box-shadow: 0 -8px 5px -5px #999 inset;
+	clear: both;
+	position: relative;
+	z-index: 9999;
+	width: 100%;
+	overflow: hidden;
+	text-align: center;
+	//border:1px solid #000000;
+}
 .hook-text {
-	/* customizable */ font-size: 2em;
+	/* customizable */ font-size: 1.25em;
 	/* customizable */ font-family: Arial, Helvetica, sans-serif;
 	/* customizable */ color: #666;
 	/* customizable */ font-weight: normal;
@@ -210,7 +242,7 @@ body {
 }
 .hook-spinner {
 	display: block;
-	/* customizable */ background: url(hook-spinner.png) no-repeat center;
+	/* customizable */ background: url(../material/hook/hook-spinner.png) no-repeat center;
  	/* customizable */ width: 32px;
  	/* customizable */ height: 32px;
  	-webkit-animation: spin 1s linear infinite both;
@@ -231,7 +263,7 @@ only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
   
   .hook-spinner {
-  	#background: url(hook-spinner@2x.png) no-repeat center;
+  	#background: url(../material/hook/hook-spinner@2x.png) no-repeat center;
   	#background-size: 32px 32px;
   }
 }
