--- a/myinfosit/app/plugins/happytime/css/demo.css
+++ b/myinfosit/app/plugins/happytime/css/demo.css
@@ -66,9 +66,9 @@ body {
 	padding: 5px 10px 5px 10px;
 	text-align:center;
 	color: #ffffff;
-	font-size: 2.5em;
+	font-size: 1em;
 	font-family: serif;
-	font-weight: 200;
+	font-weight: 100;
 	word-spacing: -2px;
 	line-height: 15px;
 	
@@ -115,7 +115,7 @@ body {
 	background-size:100%;
 	padding-bottom: 10px;
   background-repeat:no-repeat;
-  height: 350px;
+  height: 150px;
   background-clip:content-box;
   display: block;  
   position: relative;	
@@ -124,8 +124,8 @@ body {
 }
 
 .article_item {
-	border-top: 2px solid #DADADA;
-	height: 200px;
+	border-top: 1px solid #DADADA;
+	height: 80px;
 	position: relative;	
 	float: left;
 	width: 100%;
@@ -144,7 +144,7 @@ body {
 .article_item .item_title .item_title_text {	
 	color: #000000;
 	font-weight: 100;
-	font-size: 2.75em;
+	font-size: 1em;
 	font-family: serif;	
 	padding: 2% 2% 2% 2%;
 	line-height: 1em;
@@ -154,11 +154,11 @@ body {
 
 .article_item .item_pic{
 	
-	height: 150px;
+	height: 68px;
 	position: relative;	
 	float: right;
-	width: 150px;
-	background-size: auto 150px;
+	width: 68px;
+	background-size: auto 68px;
      background-clip:content-box;
      background-position:center;
      background-repeat:no-repeat;
@@ -178,7 +178,8 @@ body {
 	/*opacity: 0.3;*/
 	filter:	alpha(opacity=0.4);
 	position: absolute;
-	bottom: 10px;	
+	bottom: 10px;
+        left: 0px;	
         //position: relative;	
 	//float: left;	
 }
@@ -186,13 +187,13 @@ body {
 .title_text {	
 	color: #ffffff;
 	font-weight: 100;
-	font-size: 3em;
+	font-size: 1em;
 	font-family: serif;	
 	padding: 2% 2% 2% 2%;
-	line-height: 1.2em;
+	line-height: 1em;
 	text-align: left;
         //border:1px solid #000000;
-       width: 100%;
+       width: 98%;
         max-height:110px;
         display: block;
         white-space: normal;
