--- a/myinfosit/app/plugins/happytime/css/demo.css
+++ b/myinfosit/app/plugins/happytime/css/demo.css
@@ -29,14 +29,17 @@
 	height: 100%;
 	position: relative;
 	float: left;
+	//border:1px solid #000000;
 }
 
 body {
 	text-align:center;
 	width: 100%;
+	height: 100%;
 	margin: 0px;
 	overflow-x: hidden;
         background-color: #E2E2E2;
+        border:1px solid #000000;
 }
 
 .container {
@@ -138,7 +141,7 @@ body {
 
 .article_item .item_title {
 	
-	height: 160px;
+	//height: 160px;
 	position: relative;	
 	float: left;
 	width:70%;
@@ -348,6 +351,7 @@ body {
 	position: relative;	
 	float: left;
 	clear: both;
+	
 }
 
 .hook * {
