--- a/myinfosit/app/plugins/happytime/css/demo.css
+++ b/myinfosit/app/plugins/happytime/css/demo.css
@@ -42,6 +42,11 @@ body {
         border:1px solid #000000;
 }
 
+body a:link { text-decoration: none;}
+body a:active { text-decoration:none}
+body a:hover { text-decoration:none;} 
+body a:visited { text-decoration: none;}
+
 .container {
 	width: 100%;
 	display: block;
@@ -69,7 +74,7 @@ body {
 	padding: 5px 10px 5px 10px;
 	text-align:center;
 	color: #ffffff;
-	font-size: 1em;
+	font-size: 0.75em;
 	font-family: serif;
 	font-weight: 100;
 	word-spacing: -2px;
@@ -310,7 +315,7 @@ body {
   display: block;  
   background-position: center;
   overflow:hidden;
-  border: 1px solid #A0A0A0;
+  //border: 1px solid #A0A0A0;
   width: 100%;
 }
 
@@ -347,7 +352,7 @@ body {
 
 .bg_bottom {
 	width: 100%;
-	height: 0px;
+	height: 10px;
 	position: relative;	
 	float: left;
 	clear: both;
